did font change and cleaned up some styles, almost ready to go on staging

--- a/htdocs/wp-content/themes/Constructo-child-theme/css/partials/_mixins.scss
+++ b/htdocs/wp-content/themes/Constructo-child-theme/css/partials/_mixins.scss
@@ -35,7 +35,7 @@
 }
 
 %fl-btn {
-	@extend %economica-normal;
+	@extend %oswald-light;
 	@extend %uppercase;
 	font-size: 100%;
 	background-color: $fl-gold;
