--- a/htdocs/wp-content/themes/Constructo-child-theme/css/partials/_typography.scss
+++ b/htdocs/wp-content/themes/Constructo-child-theme/css/partials/_typography.scss
@@ -6,12 +6,27 @@
 	font-weight: 700 !important;
 }
 
-%economica-normal {
+/* %economica-normal {
 	font-family: 'Economica' !important;
 	font-weight: 400 !important;
 }
 
 %economica-bold {
 	font-family: 'Economica' !important;
+	font-weight: 700 !important;
+} */
+
+%oswald-light {
+	font-family: 'Oswald' !important;
+	font-weight: 300 !important;
+}
+
+%oswald-normal {
+	font-family: 'Oswald' !important;
+	font-weight: 400 !important;
+}
+
+%oswald-bold {
+	font-family: 'Oswald' !important;
 	font-weight: 700 !important;
 }
