--- a/htdocs/wp-content/themes/Constructo-child-theme/css/breakpoints/_base.scss
+++ b/htdocs/wp-content/themes/Constructo-child-theme/css/breakpoints/_base.scss
@@ -4,6 +4,8 @@
 
 1. HEADER STYLES
 	1.1 Top bar
+	1.2 Search
+	1.3 Page Heading
 2. BODY STYLES
 	2.1 General
 	2.2 Seperator with Text
@@ -19,6 +21,7 @@
 3. FOOTER/SIDEBAR STYLES
 	3.1 Footer
 	3.2 Copyright
+	3.3 Gravity Forms
 
 **********************************************/
 
@@ -56,6 +59,18 @@
 	padding: 8px 0 3px 0;
 }
 
+/* 1.4 Navigation */
+.nav-tabs > li > a, 
+.site-navigation > ul a, 
+.tp-arr-titleholder {
+	font-weight: 300;
+}
+
+/* 1.5 Breadcrums */
+.page-heading .breadcrumbs li {
+	font-weight: 300 !important;	
+}
+
 
 /**********************************************
 
@@ -66,6 +81,7 @@
 /* 2.1 General */
 h1, h2, h3, h4, h5, h6 {
 	@extend %uppercase;
+	font-weight: 300 !important;
 
 	&.center {
 		text-align: center;
@@ -99,7 +115,7 @@ h1, h2, h3, h4, h5, h6 {
 a.vc_btn, 
 button.vc_btn {
 	@extend %uppercase;
-	@extend %economica-normal;
+	@extend %oswald-light;
 }
 
 .vc_btn.gold, 
@@ -170,7 +186,7 @@ button.vc_btn.gold {
 
 	p.footer-contact-txt {
 		@extend %right;
-		@extend %economica-normal;
+		@extend %oswald-light;
 		text-align: right;
 
 		span {
@@ -187,13 +203,13 @@ button.vc_btn.gold {
 /* 3.2 Copyright */
 .copyright-footer div.textwidget {
 	div.copyright-footer-txt {
-		@extend %economica-normal;
+		@extend %oswald-light;
 		@extend %uppercase;
 		@extend %left;
 	}
 
 	nav.menu-footer_nav {
-		@extend %economica-normal;
+		@extend %oswald-light;
 		@extend %uppercase;
 		@extend %right;
 
