--- a/htdocs/wp-content/themes/Constructo-child-theme/css/main.css
+++ b/htdocs/wp-content/themes/Constructo-child-theme/css/main.css
@@ -5,13 +5,22 @@ a.vc_btn,
 button.vc_btn, .alert, .copyright-footer div.textwidget div.copyright-footer-txt, .copyright-footer div.textwidget nav.menu-footer_nav {
   text-transform: uppercase !important; }
 
+/* %economica-normal {
+	font-family: 'Economica' !important;
+	font-weight: 400 !important;
+}
+
+%economica-bold {
+	font-family: 'Economica' !important;
+	font-weight: 700 !important;
+} */
 .gform_wrapper .gform_footer input.button,
 .gform_wrapper .gform_footer input[type=submit],
 .gform_wrapper .gform_footer input[type=image], .vc_btn,
 a.vc_btn,
 button.vc_btn, .site-footer div.textwidget p.footer-contact-txt, .copyright-footer div.textwidget div.copyright-footer-txt, .copyright-footer div.textwidget nav.menu-footer_nav {
-  font-family: 'Economica' !important;
-  font-weight: 400 !important; }
+  font-family: 'Oswald' !important;
+  font-weight: 300 !important; }
 
 .btn,
 .wpcf7-submit, .alert, .progress, .table thead tr th:first-child, .table thead tr th:last-child, .panel-group .panel-title a:before, .vc_grid.vc_row .vc_grid-item .vc_btn {
@@ -52,6 +61,8 @@ button.vc_btn, .site-footer div.textwidget p.footer-contact-txt, .copyright-foot
 
 1. HEADER STYLES
 	1.1 Top bar
+	1.2 Search
+	1.3 Page Heading
 2. BODY STYLES
 	2.1 General
 	2.2 Seperator with Text
@@ -67,6 +78,7 @@ button.vc_btn, .site-footer div.textwidget p.footer-contact-txt, .copyright-foot
 3. FOOTER/SIDEBAR STYLES
 	3.1 Footer
 	3.2 Copyright
+	3.3 Gravity Forms
 
 **********************************************/
 /**********************************************
@@ -93,18 +105,30 @@ button.vc_btn, .site-footer div.textwidget p.footer-contact-txt, .copyright-foot
 .page-heading {
   padding: 8px 0 3px 0; }
 
+/* 1.4 Navigation */
+.nav-tabs > li > a,
+.site-navigation > ul a,
+.tp-arr-titleholder {
+  font-weight: 300; }
+
+/* 1.5 Breadcrums */
+.page-heading .breadcrumbs li {
+  font-weight: 300 !important; }
+
 /**********************************************
 
 			    2. BODY STYLES
 
 **********************************************/
 /* 2.1 General */
-h1.center, h2.center, h3.center, h4.center, h5.center, h6.center {
-  text-align: center; }
-h1.white, h2.white, h3.white, h4.white, h5.white, h6.white {
-  color: white; }
-h1.lesspadding span, h2.lesspadding span, h3.lesspadding span, h4.lesspadding span, h5.lesspadding span, h6.lesspadding span {
-  padding: 0 20px 20px; }
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 300 !important; }
+  h1.center, h2.center, h3.center, h4.center, h5.center, h6.center {
+    text-align: center; }
+  h1.white, h2.white, h3.white, h4.white, h5.white, h6.white {
+    color: white; }
+  h1.lesspadding span, h2.lesspadding span, h3.lesspadding span, h4.lesspadding span, h5.lesspadding span, h6.lesspadding span {
+    padding: 0 20px 20px; }
 
 /* 2.2 Seperator with Text */
 /* 2.3 Tabs */
